CI: split the preliminary checks in individual checks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ before_script:
   - mkdir -p build
 
 include:
+  - .gitlab/preliminary.yml
   - .gitlab/common.yml
   - .gitlab/build.yml
   - .gitlab/test.yml
